fix a layout bug with right head and fix a img display bug

--- a/public/src/css/room.less
+++ b/public/src/css/room.less
@@ -247,6 +247,7 @@
 /* 右边泡泡 头部信息 */
 .bubble-right > .bubble-head {
   float: right;
+  margin-top: 0;
 }
 /* 左边泡泡 内容 */
 .bubble-left > .bubble-ctx {
